tests/baselines/reference/gettersAndSettersErrors.errors.txt
==== tests/cases/compiler/gettersAndSettersErrors.ts (8 errors) ====
    class C {
        public get Foo() { return "foo";} // ok
        public set Foo(foo:string) {} // ok
    
        public Foo = 0; // error - duplicate identifier Foo - confirmed
               ~~~
!!! error TS2000: Duplicate identifier 'Foo'.
        public get Goo(v:string):string {return null;} // error - getters must not have a parameter
        public set Goo(v:string):string {} // error - setters must not specify a return type
                                ~
!!! error TS1005: '{' expected.
                                 ~~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
                                        ~
!!! error TS1005: ';' expected.
                                 ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    class E {
        private get Baz():number { return 0; }
                    ~~~
!!! error TS2127: Getter and setter accessors do not agree in visibility.
        public set Baz(n:number) {} // error - accessors do not agree in visibility
                   ~~~
!!! error TS2127: Getter and setter accessors do not agree in visibility.
    }
    
    
    